[project]
name = "dual-sleeve-trader"
version = "0.1.0"
description = "Production skeleton for a dual-sleeve crypto trading system running in signal-only and exchange testnet modes."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Dual Sleeve Trading System" }]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_return_any = true
